syntax = "proto3";

package proto;

option go_package = "./proto;calculatorpb";

service Calculator {
  rpc Add(AddRequest) returns (AddResponse) {}
  rpc Subtract(SubtractRequest) returns (SubtractResponse) {}
}

message AddRequest {
  double num1 = 1;
  double num2 = 2;
}

message AddResponse {
  double sum = 1;
}

message SubtractRequest {
  double num1 = 1;
  double num2 = 2;
}

message SubtractResponse {
  double difference = 1;
}